Mudando o diretorio de arquivos

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio Tailwind</title>
-    <link rel="stylesheet" href="/public/styles.css">
+    <link rel="stylesheet" href="../public/styles.css">
 </head>
 <body class="min-h-screen min-w-screen overflow-x-hidden">
     <header class="w-full bg-black bg-opacity-90 fixed z-20">
